# python-learning-program

./: .gitignore  Calendario.md  Calendario.md.bak-20251021-193152  Calendario.md.bak-20251021-200055  Calendario.md.bak-20251021-200123  Calendario.md.bak-20251021-200139  Calendario.md.bak-20251021-200746  Calendario.md.bak-20251022-173352  Calendario.md.bak-20251022-173353  Calendario.md.bak-20251022-173354  Calendario.md.bak-20251022-233708  Calendario.md.bak-20251022-233709  Calendario.md.bak-20251022-233710  Calendario.md.bak-20251022-233711  Calendario.md.bak-20251022-233712  Calendario.md.bak-20251022-234502  Calendario.md.bak-20251023-000949  Calendario.md.bak-20251023-001442  Calendario.md.bak-20251023-001443  Calendario.md.books.bak-20251022-124921  Calendario.md.books.bak-20251022-124922  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scaffold.sh
.github/workflows/: ci.yml
resources/: books.yml  videos.md  videos.yml
src/app/: __init__.py  hello.py
tests/: conftest.py  test_hello.py  test_videos_index.py
tools/: inject_all_books.py  inject_all_videos.py  inject_all_weeks.py  inject_books.py  inject_videos.py  suggest_books.py  suggest_videos.py
