[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-learning-program"
version = "0.1.0"
description = "Programa de aprendizaje de Python 2025 (plantilla)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310","py311","py312","py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
exclude = ["dist","build",".venv",".mypy_cache",".ruff_cache"]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B"]
ignore = ["E203","E501"]


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
